[package]
name = "event-intake"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1.17", features = ["full"]}
tracing = "0.1"
tracing-subscriber = "0.3"
futures-util = "0.3"

serde_json = "1.0"

chrono = { version = "0.4", features = ["serde"]}
chrono-tz = "0.5"
clickhouse-rs = "1.0.0-alpha.1"
actix-web = "4"